thumbnailer: Fix compile-time warning on x32

https://bugzilla.gnome.org/show_bug.cgi?id=700548